--- a/Fraud-MS/src/main/resources/application.properties
+++ b/Fraud-MS/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.application.name=fraud
+spring.application.name=fraud-ms
 
 #connect to database
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,3 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#Eureka Server
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
