--- a/Hotel-MS/src/main/resources/application.properties
+++ b/Hotel-MS/src/main/resources/application.properties
@@ -1,12 +1,23 @@
-##connect to database
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/hoteldb
-#spring.datasource.username=postgres
-#spring.datasource.password=pgadmin
-#
-### JPA Config
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.application.name=hotel-ms
+server.port=8080
+
+#connect to database
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/hoteldb
+spring.datasource.username=postgres
+spring.datasource.password=pgadmin
+
+## JPA Config
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#Eureka Server
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
+
+
 
