--- a/Fraud-MS/src/main/resources/application.properties
+++ b/Fraud-MS/src/main/resources/application.properties
@@ -17,3 +17,13 @@ spring.jpa.properties.hibernate.format_sql=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+
+
+# RabbitMQ config
+spring.rabbitmq.host=fraud
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+rabbitmq.queue.reservation=reservations
+
