--- a/Hotel-MS/src/main/resources/application.properties
+++ b/Hotel-MS/src/main/resources/application.properties
@@ -18,6 +18,15 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+rabbitmq.queue.reservation=reservations
+
+
+
 
 
 
