--- a/Fraud-MS/Dockerfile
+++ b/Fraud-MS/Dockerfile
@@ -1,16 +1,5 @@
-FROM adoptopenjdk/openjdk17:alpine-jre
+FROM openjdk:17
 
-# Set the working directory
-WORKDIR /app
+COPY target/*.jar app.jar
 
-# Copy the jar file to the container
-COPY target/Fraud-MS-0.0.1-SNAPSHOT.jar /app/
-
-# Set the user to run the container
-USER nobody:nobody
-
-# Expose the port
-EXPOSE 8081
-
-# Set the entrypoint
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/app/Fraud-MS-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/app.jar"]
