--- a/Fraud-MS/src/main/resources/application.properties
+++ b/Fraud-MS/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.application.name=fraud-ms
 
 #connect to database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/fraud
+spring.datasource.url=jdbc:postgresql://postgres::5432/fraud
+
 spring.datasource.username=postgres
-spring.datasource.password=pgadmin
+#spring.datasource.password=pgadmin
 
 ## JPA Config
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
