--- a/Hotel-MS/src/main/resources/application.properties
+++ b/Hotel-MS/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=hotel-ms
 server.port=8080
 
 #connect to database
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/hoteldb
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotels
 spring.datasource.username=postgres
 spring.datasource.password=pgadmin
+
+
 
 ## JPA Config
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -14,16 +15,20 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Eureka Server
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://eureka-server:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+eureka.client.enabled=true
+
+
 
 #rabbitmq
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 rabbitmq.queue.reservation=reservations
+
 
 
 
