--- a/Fraud-MS/src/main/resources/application.properties
+++ b/Fraud-MS/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=8081
 spring.application.name=fraud-ms
+server.port=8081
 
 #connect to database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgres::5432/fraud
+spring.datasource.url=jdbc:postgresql://postgres:5432/fraud
 
 spring.datasource.username=postgres
-#spring.datasource.password=pgadmin
+spring.datasource.password=pgadmin
 
 ## JPA Config
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -15,13 +15,15 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Eureka Server
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://eureka-server:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+eureka.client.enabled=true
+
 
 
 # RabbitMQ config
-spring.rabbitmq.host=fraud
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
