--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,6 @@ services:
       environment:
         SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
         spring.datasource.url: jdbc:postgresql://postgres:5432/hotels
-      # volumes:
-      # - ./Hotel-MS/src/main/resources/application.properties:/app/config/application.properties   
       networks:
         - spring
         - postgres
@@ -66,68 +64,26 @@ services:
         - eureka-server
         - postgres
         - rabbitmq
-#  apigw:
-#    image: amigoscode/apigw:latest
-#    container_name: apigw
-#    ports:
-#      - "8083:8083"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#    depends_on:
-#      - zipkin
-#      - eureka-server
-
-#  customer:
-#    image: amigoscode/customer:latest
-#    container_name: customer
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#      - postgres
-#    depends_on:
-#      - zipkin
-#      - postgres
-#      - rabbitmq
-
   fraud-ms:
-    build:
-      context: ./Fraud-MS
-      dockerfile: Dockerfile
-    image: fraud-ms
-    container_name: fraud-ms
-    ports:
-      - "8081:8081"
-    environment:
+      build:
+        context: ./FRAUD-MS
+        dockerfile: Dockerfile
+      image: fraud-ms
+      container_name: FRAUD-MS
+      ports:
+        - "8081:8081"
+      environment:
         SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
         spring.datasource.url: jdbc:postgresql://postgres:5432/fraud
-    networks:
-      - spring
-      - postgres
-    depends_on:
-      - eureka-server
-      - zipkin
-      - postgres
-      - rabbitmq
+      networks:
+        - spring
+        - postgres
+      depends_on:
+        - zipkin
+        - eureka-server
+        - postgres
+        - rabbitmq
 
-#  notification:
-#    image: amigoscode/notification:latest
-#    container_name: notification
-#    ports:
-#      - "8082:8082"
-#    environment:
-#      - SPRING_PROFILES_ACTIVE=docker
-#    networks:
-#      - spring
-#      - postgres
-#    depends_on:
-#      - zipkin
-#      - postgres
-#      - rabbitmq
 
   zipkin:
     image: openzipkin/zipkin
