--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     container_name: eureka-server
     ports:
       - "8761:8761"
+
     networks:
       - spring
     depends_on:
@@ -52,7 +53,7 @@ services:
       image: hotel-ms
       container_name: Hotel-MS
       ports:
-        - "8080:8080"
+        - "8085:8085"
       environment:
         SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
         spring.datasource.url: jdbc:postgresql://postgres:5432/hotels
@@ -83,7 +84,21 @@ services:
         - eureka-server
         - postgres
         - rabbitmq
-
+  apigw:
+      build:
+        context: ./api-gateway
+        dockerfile: Dockerfile
+      image: apigw
+      container_name: apigw
+      ports:
+        - "8080:8080"
+      environment:
+        SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'  
+      networks:
+        - spring
+      depends_on:
+        - zipkin
+        - eureka-server
 
   zipkin:
     image: openzipkin/zipkin
