--- a/Agency-MS/src/main/resources/application.properties
+++ b/Agency-MS/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+spring.application.name=agent-ms
+server.port=8086
 
+#database
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/agent?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -7,5 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka/
-eureka.instance.prefer-ip-address=true
+#Eureka Server
+eureka.client.service-url.default-zone=http://eureka-server:8085/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.enabled=true
+
