--- a/Agency-MS/src/main/resources/application.properties
+++ b/Agency-MS/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8082
 
 #database
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/agent?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/agent?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:}
 
 
 spring.jpa.show-sql=true
