--- a/Hotel-MS/src/main/resources/application.properties
+++ b/Hotel-MS/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=hotel-ms
 server.port=8085
 
 #connect to database
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotels
-spring.datasource.username=postgres
-spring.datasource.password=pgadmin
-
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hotels
+#spring.datasource.username=postgres
+#spring.datasource.password=pgadmin
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/agent?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
 
 
 ## JPA Config
