--- a/Eureka-server/Dockerfile
+++ b/Eureka-server/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
 
 COPY target/*.jar app.jar
-
-ENTRYPOINT ["java","-jar","/app.jar"]
+EXPOSE 8761
+ENTRYPOINT ["java","-jar","app.jar"]
