--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,26 @@
 version: '3.8'
 
 services:
-  postgres:
-    container_name: postgres
-    image: postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: pgadmin
-      PGDATA: /data/postgres
-    volumes:
-      - postgres:/data/postgres
+ 
+  db:
+    container_name: mysqldb1
+    image: mysql/mysql-server:8.0  
     ports:
-      - "5432:5432"
-    networks:
-      - postgres
-    restart: unless-stopped
-
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
+      - 3306:3306   
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      - MYSQL_ROOT_PASSWORD=guessitplease
+      - MYSQL_DATABASE=carrent
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=guessitplease
     volumes:
-      - pgadmin:/var/lib/pgadmin
-    ports:
-      - "5050:80"
+      - mysql:/var/lib/mysql
+    command:
+      - --bind-address=0.0.0.0
+      - --skip-host-cache
+      - --skip-name-resolve
+      
     networks:
-      - postgres
-    restart: unless-stopped
+      - spring 
 
   eureka-server:
     build:
@@ -46,44 +37,29 @@ services:
       - zipkin
 
 
-  hotel-ms:
+  rent-ms:
       build:
-        context: ./Hotel-MS
-        dockerfile: Dockerfile
-      image: hotel-ms
-      container_name: Hotel-MS
+        context: ./Rent-MS
+      
+     
+      container_name: rent-MS
       ports:
-        - "8085:8085"
+         - "8080:8080"
       environment:
-        SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
-        spring.datasource.url: jdbc:postgresql://postgres:5432/hotels
+           SPRING_DATASOURCE_URL: jdbc:mysql://192.168.1.110:3306/carrent
+           SPRING_DATASOURCE_USERNAME: root
+           SPRING_DATASOURCE_PASSWORD: guessitplease
+           SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'  
+
+       
       networks:
-        - spring
-        - postgres
+         - spring
       depends_on:
-        - zipkin
-        - eureka-server
-        - postgres
-        - rabbitmq
-  fraud-ms:
-      build:
-        context: ./FRAUD-MS
-        dockerfile: Dockerfile
-      image: fraud-ms
-      container_name: FRAUD-MS
-      ports:
-        - "8081:8081"
-      environment:
-        SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
-        spring.datasource.url: jdbc:postgresql://postgres:5432/fraud
-      networks:
-        - spring
-        - postgres
-      depends_on:
-        - zipkin
-        - eureka-server
-        - postgres
-        - rabbitmq
+          - zipkin
+          - eureka-server
+          - db
+          - rabbitmq
+
   apigw:
       build:
         context: ./api-gateway
@@ -91,7 +67,7 @@ services:
       image: apigw
       container_name: apigw
       ports:
-        - "8080:8080"
+        - "8081:8081"
       environment:
         SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'  
       networks:
@@ -118,11 +94,10 @@ services:
       - spring
       
 networks:
-  postgres:
-    driver: bridge
+ 
   spring:
     driver: bridge
 
 volumes:
-  postgres:
+  mysql:
   pgadmin:
