--- a/Rent-MS/src/main/resources/application.properties
+++ b/Rent-MS/src/main/resources/application.properties
@@ -6,3 +6,11 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.default-zone=http://eureka-server:8761/eureka/
 eureka.client.enabled=true
 spring.application.name=rent-ms
+
+#rabbitmq
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+rabbitmq.queue.reservation=reservations
+
