--- a/Agency-MS/src/main/resources/application.properties
+++ b/Agency-MS/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 spring.application.name=agent-ms
-server.port=8082
+server.port=9090
 
 #database
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/agent?createDatabaseIfNotExist=true
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:}
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/agent?createDatabaseIfNotExist=true
+#spring.datasource.username=${MYSQL_USER:root}
+#spring.datasource.password=${MYSQL_PASSWORD:}
+
+
+spring.datasource.url=jdbc:mysql://localhost::4000/agent?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
 
 
 spring.jpa.show-sql=true
