--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,39 @@ services:
       - postgres
     restart: unless-stopped
 
+  mysqldb:
+    container_name: mysqldb
+    image: "mysql:latest"
+    restart: "on-failure"
+    environment:
+        - MYSQL_ROOT_PASSWORD=root
+        - MYSQL_DATABASE=database
+        - MYSQL_USER=root
+        - MYSQL_PASSWORD=root
+    volumes:
+      - '/home/mysql-data-v1:/var/lib/mysql'
+    ports:
+      - "4004:4000"
+    networks:
+      - agency
+
+  agency-ms:
+    build:
+      context: ./Agency-MS
+      dockerfile: Dockerfile
+    image: agency-ms
+    container_name: agency-ms
+    ports:
+      - "8082:8082"
+    environment:
+      SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
+      spring.datasource.url: jdbc:mysql://mysqldb:4000/agent?createDatabaseIfNotExist=true
+    networks:
+      - agency
+    depends_on:
+      - mysqldb
+
+
   eureka-server:
     build:
       context: ./Eureka-server
@@ -147,10 +180,16 @@ services:
     depends_on:
       - keycloak-postgres
 
+
+
+
+
 networks:
   postgres:
     driver: bridge
   spring:
+    driver: bridge
+  agency:
     driver: bridge
 
 volumes:
