--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     volumes:
       - '/home/mysql-data-v1:/var/lib/mysql'
     ports:
-      - "4004:4000"
+      - "4000:4000"
     networks:
       - agency
 
@@ -57,7 +57,7 @@ services:
       - "8082:8082"
     environment:
       SPRING_APPLICATION_JSON: '{"eureka":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
-      spring.datasource.url: jdbc:mysql://mysqldb:4000/agent?createDatabaseIfNotExist=true
+      spring.datasource.url: jdbc:mysql://mysqldb:4000/agent?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC
     networks:
       - agency
     depends_on:
