--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/reservation/**
 
 
 ## Fraud Service Route
-spring.cloud.gateway.routes[1].id=hotel-ms
+spring.cloud.gateway.routes[1].id=fraud-ms
 spring.cloud.gateway.routes[1].uri=lb://Fraud-MS
 spring.cloud.gateway.routes[1].predicates[0]=Path=/checkFraud/**
 
@@ -29,6 +29,11 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/checkFraud/**
 spring.cloud.gateway.routes[2].id=eureka-server
 spring.cloud.gateway.routes[2].uri=http://eureka-server
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/**
+
+## TRip Service Route
+spring.cloud.gateway.routes[3].id=trip-ms
+spring.cloud.gateway.routes[3].uri=lb://Trip-MS
+spring.cloud.gateway.routes[3].predicates[0]=Path=/trips/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
 
