--- a/Rent-MS/src/main/resources/application.properties
+++ b/Rent-MS/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.default-zone=http://eureka-server:8761/eureka/
 eureka.client.enabled=true
 spring.application.name=rent-ms
 
-#rabbitmq
+#rabbitmq1
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
